tests/rustdoc-ui/math/basic.stderr
error: unknown command "\frobnicate"
  --> $DIR/basic.rs:7:5
   |
LL | //! $\frobnicate{2}$
   |     ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/basic.rs:3:9
   |
LL | #![deny(rustdoc::invalid_math)]
   |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

